<resources>
    <string name="app_name">PhonePro</string>
    <string name="model">model</string>
    <string name="brand">brand</string>
    <string name="selectedmodellist">selectedModelList</string>
    <string name="enter_pickup_info">Enter Pickup Info</string>
    <string name="full_name">Full Name</string>
    <string name="john_doe">John Doe</string>
    <string name="phone_number">Phone Number</string>
    <string name="_444_444_444">444-444-444</string>
    <string name="pickup_time">Pickup Time</string>
    <string name="enter_payment_info">Enter Payment Info</string>
    <string name="card_type">Card Type</string>
    <string name="card_number">Card Number</string>
    <string name="_1234123412341234">1234123412341234</string>
    <string name="card_expiry">Card Expiry</string>
    <string name="mm_yyyy">MM/YYYY</string>
    <string name="stars">***</string>
    <string name="place_order">PLACE ORDER</string>
    <string name="error_valid_name">please enter your name</string>
    <string name="error_valid_number">failed phone number</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="error_valid_card_number">Please enter a valid card number</string>
    <string name="error_valid_card_date">Please enter a valid card date</string>
    <string name="error_valid_card_cvv">Please enter a valid card CVV</string>
    <string name="customerinfo">customerInfo</string>
    <string name="oreder_summary">Oreder Summary</string>
    <string name="address">Address</string>

</resources>